user interface ready

--- a/customer-style.css
+++ b/customer-style.css
@@ -6,17 +6,19 @@
     background-image: url(customer.jpeg);
     border-radius: 20px;
      z-index: 1;
+     
+     
 }
 
 
 
 .transparent-box {
     position: fixed;
-    /* Required for top/right to work */
+    
     top: 30px;
-    /* Moves the box down from top */
+    
     right: 30px;
-    /* Anchors to the right */
+    
     width: 40vw;
     /* Covers right half */
     height: calc(100vh - 50px);
@@ -78,23 +80,23 @@ h2{
 }
 
 .login-btn {
-  
-  
-  margin-left: 800px;
-    margin-top: 10px;
-    font-size: 20px;
-      background-color: white; /* Light yellow inside */
-      
-    gap: 20px;
-    
-  
-  color: black;
-  transition: all 0.3s ease;
+    padding: 12px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    box-shadow: 0 0 8px black;
+    transition: 0.3s;
+    margin-left: 800px;
 }
 
 .login-btn:hover {
-  background-color: black;
-  color: white;
+    background-color: black;
+    color: white;
 }
 
 input[type="email"] {
